--- a/03_setup_k8s_platform/templates/ckan/ckan_values.yaml.j2
+++ b/03_setup_k8s_platform/templates/ckan/ckan_values.yaml.j2
@@ -203,6 +203,11 @@ ingress:
      hosts:
        - {{ ckan.ingress_host }}
 
+# ingressRoute -- Used in conjunction with a Traefik v2 deployment
+ingressRoute:
+  enabled: {{ ckan.ingressRoute_enabled }}
+  host: {{ ckan.ingressRoute_host }}
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
