--- a/03_setup_k8s_platform/templates/monitoring/loki-values.yaml.j2
+++ b/03_setup_k8s_platform/templates/monitoring/loki-values.yaml.j2
@@ -163,8 +163,8 @@ podManagementPolicy: OrderedReady
 # priorityClassName:
 
 rbac:
-  create: true
-  pspEnabled: true
+  create: false
+  pspEnabled: false
 
 readinessProbe:
   httpGet:
