--- a/03_setup_k8s_platform/templates/monitoring/promtail-values.yaml.j2
+++ b/03_setup_k8s_platform/templates/monitoring/promtail-values.yaml.j2
@@ -177,7 +177,7 @@ serviceMonitor:
 
 # -- Configure additional ports and services. For each configured port, a corresponding service is created.
 # See values.yaml for details
-extraPorts: {}
+extraPorts: []
 #  syslog:
 #    name: tcp-syslog
 #    containerPort: 1514
