--- a/03_setup_k8s_platform/templates/monitoring/promtail-values.yaml.j2
+++ b/03_setup_k8s_platform/templates/monitoring/promtail-values.yaml.j2
@@ -300,7 +300,9 @@ config:
       # Pods with a label 'app.kubernetes.io/name'
       - job_name: kubernetes-pods-app-kubernetes-io-name
         pipeline_stages:
-         {% raw %}{{ {{- toYaml .Values.config.snippets.pipelineStages | nindent 4 }} {% endraw %}
+         {% raw %}
+         {{- toYaml .Values.config.snippets.pipelineStages | nindent 4 }} 
+         {% endraw %}
         kubernetes_sd_configs:
           - role: pod
         relabel_configs:
@@ -316,17 +318,25 @@ config:
             source_labels:
               - __meta_kubernetes_pod_label_app_kubernetes_io_component
             target_label: component
-          {% raw %}{{- if .Values.config.snippets.addScrapeJobLabel }}{% endraw %}
+            {% raw %}
+              {{- if .Values.config.snippets.addScrapeJobLabel }}
+            {% endraw %}
           - action: replace
             replacement: kubernetes-pods-app-kubernetes-io-name
             target_label: scrape_job
-          {% raw %}{{- end }}{% endraw %}
-          {% raw %}{{- toYaml .Values.config.snippets.common | nindent 4 }}{% endraw %}
+            {% raw %}
+            {{- end }}
+            {% endraw %}
+            {% raw %}
+            {{- toYaml .Values.config.snippets.common | nindent 4 }}
+            {% endraw %}
 
       # Pods with a label 'app'
       - job_name: kubernetes-pods-app
         pipeline_stages:
-          {% raw %}{{- toYaml .Values.config.snippets.pipelineStages | nindent 4 }}{% endraw %}
+          {% raw %}
+          {{- toYaml .Values.config.snippets.pipelineStages | nindent 4 }}
+          {% endraw %}
         kubernetes_sd_configs:
           - role: pod
         relabel_configs:
@@ -347,17 +357,25 @@ config:
             source_labels:
               - __meta_kubernetes_pod_label_component
             target_label: component
-          {% raw %}{{- if .Values.config.snippets.addScrapeJobLabel }}{% endraw %}
+            {% raw %}
+            {{- if .Values.config.snippets.addScrapeJobLabel }}
+            {% endraw %}
           - action: replace
             replacement: kubernetes-pods-app
             target_label: scrape_job
-          {% raw %}{{- end }}{% endraw %}
-          {% raw %}{{- toYaml .Values.config.snippets.common | nindent 4 }}{% endraw %}
+            {% raw %}
+            {{- end }}
+            {% endraw %}
+            {% raw %}
+            {{- toYaml .Values.config.snippets.common | nindent 4 }}
+            {% endraw %}
 
       # Pods with direct controllers, such as StatefulSet
       - job_name: kubernetes-pods-direct-controllers
         pipeline_stages:
-          {% raw %}{{- toYaml .Values.config.snippets.pipelineStages | nindent 4 }}{% endraw %}
+          {% raw %}
+          {- toYaml .Values.config.snippets.pipelineStages | nindent 4 }}
+          {% endraw %}
         kubernetes_sd_configs:
           - role: pod
         relabel_configs:
@@ -376,17 +394,25 @@ config:
             source_labels:
               - __meta_kubernetes_pod_controller_name
             target_label: app
-          {% raw %}{{- if .Values.config.snippets.addScrapeJobLabel }}{% endraw %}
+            {% raw %}
+            {{- if .Values.config.snippets.addScrapeJobLabel }}
+            {% endraw %}
           - action: replace
             replacement: kubernetes-pods-direct-controllers
             target_label: scrape_job
-          {% raw %}{{- end }}{% endraw %}
-          {% raw %}{{- toYaml .Values.config.snippets.common | nindent 4 }}{% endraw %}
+            {% raw %}
+            {{- end }}
+            {% endraw %}
+            {% raw %}
+            {{- toYaml .Values.config.snippets.common | nindent 4 }}
+            {% endraw %}
 
       # Pods with indirect controllers, such as Deployment
       - job_name: kubernetes-pods-indirect-controller
         pipeline_stages:
-          {% raw %}{{- toYaml .Values.config.snippets.pipelineStages | nindent 4 }}{% endraw %}
+          {% raw %}
+          {{- toYaml .Values.config.snippets.pipelineStages | nindent 4 }}
+          {% endraw %}
         kubernetes_sd_configs:
           - role: pod
         relabel_configs:
@@ -406,16 +432,24 @@ config:
             source_labels:
               - __meta_kubernetes_pod_controller_name
             target_label: app
-          {% raw %}{{- if .Values.config.snippets.addScrapeJobLabel }}{% endraw %}
+            {% raw %}
+            {{- if .Values.config.snippets.addScrapeJobLabel }}
+            {% endraw %}
           - action: replace
             replacement: kubernetes-pods-indirect-controller
             target_label: scrape_job
-          {% raw %}{{- end }}{% endraw %}
-          {% raw %}{{- toYaml .Values.config.snippets.common | nindent 4 }}{% endraw %}
+            {% raw %}
+            {{- end }}
+            {% endraw %}
+            {% raw %}
+            {{- toYaml .Values.config.snippets.common | nindent 4 }}
+            {% endraw %}
       # All remaining pods not yet covered
       - job_name: kubernetes-other
         pipeline_stages:
-          {% raw %}{{- toYaml .Values.config.snippets.pipelineStages | nindent 4 }}{% endraw %}
+            {% raw %}
+            {{- toYaml .Values.config.snippets.pipelineStages | nindent 4 }}
+            {% endraw %}
         kubernetes_sd_configs:
           - role: pod
         relabel_configs:
@@ -438,12 +472,18 @@ config:
             source_labels:
               - __meta_kubernetes_pod_label_component
             target_label: component
-          {% raw %}{{- if .Values.config.snippets.addScrapeJobLabel }}{% endraw %}
+            {% raw %}
+            {{- if .Values.config.snippets.addScrapeJobLabel }}
+            {% endraw %}
           - action: replace
             replacement: kubernetes-other
             target_label: scrape_job
-          {% raw %}{{- end }}{% endraw %}
-          {% raw %}{{- toYaml .Values.config.snippets.common | nindent 4 }}{% endraw %}
+            {% raw %}
+            {{- end }}
+            {% endraw %}
+            {% raw %}
+            {{- toYaml .Values.config.snippets.common | nindent 4 }}
+            {% endraw %}
 
   # -- Config file contents for Promtail.
   # Must be configured as string.
