Reactivate RBAC for Monitoring Stack

--- a/03_setup_k8s_platform/templates/monitoring/loki-values.yaml.j2
+++ b/03_setup_k8s_platform/templates/monitoring/loki-values.yaml.j2
@@ -163,7 +163,7 @@ podManagementPolicy: OrderedReady
 # priorityClassName:
 
 rbac:
-  create: false
+  create: true
   pspEnabled: false
 
 readinessProbe:
