--- a/03_setup_k8s_platform/templates/monitoring/promtail-values.yaml.j2
+++ b/03_setup_k8s_platform/templates/monitoring/promtail-values.yaml.j2
@@ -89,7 +89,7 @@ containerSecurityContext:
 
 rbac:
   # -- Specifies whether RBAC resources are to be created
-  create: false
+  create: true
   # -- Specifies whether a PodSecurityPolicy is to be created
   pspEnabled: false
 
