--- a/03_setup_k8s_platform/templates/monitoring/grafana-values.yaml.j2
+++ b/03_setup_k8s_platform/templates/monitoring/grafana-values.yaml.j2
@@ -1,5 +1,5 @@
 rbac:
-  create: false
+  create: true
   ## Use an existing ClusterRole/Role (depending on rbac.namespaced false/true)
   # useExistingRole: name-of-some-(cluster)role
   pspEnabled: false
