Issue #82: Added ingress controller, so QGIS Server is now reachable via https://mapserver.utr-k8s.urban-data.cloud/qgis-server .

--- a/03_setup_k8s_platform/templates/webgis/qgisserver_values.yaml.j2
+++ b/03_setup_k8s_platform/templates/webgis/qgisserver_values.yaml.j2
@@ -68,3 +68,18 @@ nginx:
   #----------------------------------
   default_conf: "{{ qgisserver.nginx_default_conf }}"
   qgis_conf: "{{ qgisserver.nginx_qgis_conf }}"
+
+ingress:
+  enabled: {{ qgisserver.ingress_enabled }}
+  annotations:
+    kubernetes.io/ingress.class: "{{ qgisserver.ingress_class }}"
+    kubernetes.io/tls-acme: "{{ qgisserver.ingress_tls_acme }}"
+  hosts:
+    - host: {{ qgisserver.ingress_host }}
+      paths:
+        - path: {{ qgisserver.ingress_host_path }}
+
+  tls:
+    - secretName: {{ qgisserver.ingress_tls_secret }}
+      hosts:
+        - {{ qgisserver.ingress_host }}
