--- a/03_setup_k8s_platform/templates/grafana/grafana-values.yaml.j2
+++ b/03_setup_k8s_platform/templates/grafana/grafana-values.yaml.j2
@@ -175,7 +175,7 @@ ingress:
   pathType: Prefix
 
   hosts:
-    - "{{ grafana.ingress_server_name }}.{{ DOMAIN_NAME }}"
+    - "{{ grafana.ingress_server_name }}.{{ DOMAIN }}"
   ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services.
   extraPaths: []
   # - path: /*
@@ -195,7 +195,7 @@ ingress:
   tls: 
     - secretName: "{{ grafana.ingress_tls_secret }}"
       hosts:
-        - "{{ grafana.ingress_server_name }}.{{ DOMAIN_NAME }}"
+        - "{{ grafana.ingress_server_name }}.{{ DOMAIN }}"
 
 resources: {}
 #  limits:
@@ -359,7 +359,7 @@ env:
   GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "contains(roles[*], 'adminTech') && 'Admin' || contains(roles[*], 'dataProducer') && 'Editor' || 'Viewer'"
   GF_SECURITY_ALLOW_EMBEDDING: "true"
   GF_SECURITY_COOKIE_SAMESITE: "lax"
-  GF_SERVER_ROOT_URL: "https://{{ grafana.ingress_server_name }}.{{ DOMAIN_NAME }}"
+  GF_SERVER_ROOT_URL: "https://{{ grafana.ingress_server_name }}.{{ DOMAIN }}"
 
 ## "valueFrom" environment variable references that will be added to deployment pods
 ## ref: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.17/#envvarsource-v1-core
