--- a/03_setup_k8s_platform/templates/webgis/masterportal_values.yaml.j2
+++ b/03_setup_k8s_platform/templates/webgis/masterportal_values.yaml.j2
@@ -46,8 +46,8 @@ ingress:
     kubernetes.io/ingress.class: "{{ masterportal.ingress_class }}"
     kubernetes.io/tls-acme: "{{ masterportal.ingress_tls_acme }}"
     nginx.ingress.kubernetes.io/app-root: /webgis-masterportal
-    nginx.ingress.kubernetes.io/auth-url: "https://mpoauth.{{ DOMAIN_NAME }}/oauth2/auth"
-    nginx.ingress.kubernetes.io/auth-signin: "https://mpoauth.{{ DOMAIN_NAME }}/oauth2/start?rd=https://$host$request_uri"
+    nginx.ingress.kubernetes.io/auth-url: "https://mpoauth.{{ DOMAIN }}/oauth2/auth"
+    nginx.ingress.kubernetes.io/auth-signin: "https://mpoauth.{{ DOMAIN }}/oauth2/start?rd=https://$host$request_uri"
     nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email
     
   hosts:
