Issues #89 and #85: - Nginx config: value of parameter 'server_name' is now a FQDN. - Nginx config: CORS is now enabled for GET, POST and OPTIONS requests, coming from Hosts of the specified domain

--- a/03_setup_k8s_platform/templates/webgis/qgisserver_values.yaml.j2
+++ b/03_setup_k8s_platform/templates/webgis/qgisserver_values.yaml.j2
@@ -68,6 +68,8 @@ nginx:
   #----------------------------------
   default_conf: "{{ qgisserver.nginx_default_conf }}"
   qgis_conf: "{{ qgisserver.nginx_qgis_conf }}"
+  server_name: "{{ qgisserver.nginx_server_name }}"
+  cors_origin: "{{ qgisserver.nginx_cors_origin }}"
 
 ingress:
   enabled: {{ qgisserver.ingress_enabled }}
