First 4 tasks of issue 101

--- a/03_setup_k8s_platform/templates/grafana/grafana-values.yaml.j2
+++ b/03_setup_k8s_platform/templates/grafana/grafana-values.yaml.j2
@@ -349,8 +349,8 @@ env:
   GF_USERS_ALLOW_SIGN_UP: "false"
   GF_AUTH_DISABLE_LOGIN_FORM: "true"
   GF_AUTH_GENERIC_OAUTH_ENABLED: "true"
-  GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "{{ IDM_CLIENT }}"
-  GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: "{{ IDM_CLIENT_SECRET }}"
+  GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "{{ IDM_CLIENT_GRAFANA }}"
+  GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: "{{ IDM_CLIENT_SECRET_GRAFANA }}"
   GF_AUTH_GENERIC_OAUTH_SCOPES: "{{ IDM_SCOPE }}"
   GF_AUTH_GENERIC_OAUTH_AUTH_URL: "{{ IDM_ENDP_AUTHORIZE }}"
   GF_AUTH_GENERIC_OAUTH_TOKEN_URL: "{{ IDM_ENDP_TOKEN }}"
