--- a/03_setup_k8s_platform/templates/monitoring/grafana-values.yaml.j2
+++ b/03_setup_k8s_platform/templates/monitoring/grafana-values.yaml.j2
@@ -351,14 +351,14 @@ env:
   GF_USERS_ALLOW_SIGN_UP: "false"
   GF_AUTH_DISABLE_LOGIN_FORM: "true"
   GF_AUTH_GENERIC_OAUTH_ENABLED: "true"
-  GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "{{ IDM_CLIENT }}"
-  GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: "{{ IDM_CLIENT_SECRET }}"
+  GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "{{ IDM_CLIENT_ADMIN_TOOLS }}"
+  GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: "{{ IDM_CLIENT_SECRET_ADMIN_TOOLS }}"
   GF_AUTH_GENERIC_OAUTH_SCOPES: "{{ IDM_SCOPE }}"
   GF_AUTH_GENERIC_OAUTH_AUTH_URL: "{{ IDM_ENDP_AUTHORIZE }}"
   GF_AUTH_GENERIC_OAUTH_TOKEN_URL: "{{ IDM_ENDP_TOKEN }}"
   GF_AUTH_GENERIC_OAUTH_API_URL: "{{ IDM_ENDP_USER_INFO }}"
   GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: "true"
-  GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "contains(roles[*], 'adminTech') && 'Admin' || contains(roles[*], 'dataProducer') && 'Editor' || 'Viewer'"
+  GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "contains(roles[*], 'adminToolsAdmin') && 'Admin' || contains(roles[*], 'dataProducer') && 'Editor' || 'Viewer'"
   GF_SECURITY_ALLOW_EMBEDDING: "true"
   GF_SECURITY_COOKIE_SAMESITE: "lax"
   GF_SERVER_ROOT_URL: "https://{{ monitoring_grafana.ingress_server_name }}.{{ DOMAIN }}"
