--- a/03_setup_k8s_platform/templates/keycloak/clients/grafana.json.j2
+++ b/03_setup_k8s_platform/templates/keycloak/clients/grafana.json.j2
@@ -1,5 +1,5 @@
 {
-    "clientId": "{{ keycloak.IDM_CLIENT_GRAFANA }}",
+    "clientId": "{{ IDM_CLIENT_GRAFANA }}",
     "description": "This client was created by ansible.",
     "rootUrl": "https://idm.{{ DOMAIN }}/auth/realms/{{ IDM_REALM }}/central",
     "adminUrl": "https://idm.{{ DOMAIN }}/auth/realms/{{ IDM_REALM }}/central",
@@ -8,7 +8,7 @@
     "alwaysDisplayInConsole": false,
     "clientAuthenticatorType": "client-secret",
     "redirectUris": [
-        "https://idm.{{ DOMAIN }}/auth/realms/{{ IDM_REALM }}/central/*"
+        "https://grafana.{{ DOMAIN }}/*"
     ],
     "webOrigins": [
         "https://idm.{{ DOMAIN }}"
@@ -56,7 +56,7 @@
                 "id.token.claim": "true",
                 "access.token.claim": "true",
                 "claim.name": "groups",
-                "usermodel.clientRoleMapping.clientId": "{{ keycloak.IDM_CLIENT_GRAFANA }}"
+                "usermodel.clientRoleMapping.clientId": "{{ IDM_CLIENT_GRAFANA }}"
             }
         }
     ],
