--- a/03_setup_k8s_platform/templates/keycloak/realm/create_realm.json.j2
+++ b/03_setup_k8s_platform/templates/keycloak/realm/create_realm.json.j2
@@ -25,8 +25,8 @@
     "actionTokenGeneratedByUserLifespan": 300,
     "enabled": true,
     "sslRequired": "all",
-    "registrationAllowed": false,
-    "registrationEmailAsUsername": false,
+    "registrationAllowed": true,
+    "registrationEmailAsUsername": true,
     "rememberMe": true,
     "verifyEmail": true,
     "loginWithEmailAllowed": true,
