Final commit on issue 101 including documentation

--- a/03_setup_k8s_platform/templates/keycloak/users/platform_admin.json.j2
+++ b/03_setup_k8s_platform/templates/keycloak/users/platform_admin.json.j2
@@ -3,9 +3,9 @@
     "enabled": true,
     "totp": false,
     "emailVerified": true,
-    "firstName": "{{ keycloak.PLATFORM_ADMIN_FIRST_NAME }}",
-    "lastName": "{{ keycloak.PLATFORM_ADMIN_SURNAME }}",
-    "email": "{{ keycloak.PLATFORM_ADMIN_EMAIL }}",
+    "firstName": "{{ PLATFORM_ADMIN_FIRST_NAME }}",
+    "lastName": "{{ PLATFORM_ADMIN_SURNAME }}",
+    "email": "{{ PLATFORM_ADMIN_EMAIL }}",
     "disableableCredentialTypes": [],
     "requiredActions": ["updatePassword"],
     "notBefore": 0,
